--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,10 +1,30 @@
-version: '{branch}_1.0.{build}'
+version: '0.1.{build}'
+
+branches:
+  only:
+    - master
+
+assembly_info:
+  patch: true
+  file: AssemblyInfo.*
+  assembly_version: "{version}"
+  assembly_file_version: "{version}"
+  assembly_informational_version: "{version}"
+
 pull_requests:
   do_not_increment_build_number: true
+
 install:
 - cmd: >-
     dotnet restore
 
     nuget restore
+
 build:
   verbosity: minimal
+
+deploy:
+  provider: NuGet
+  api_key:
+    secure: zYid/cHGwm+bFfO7gdPdtLqGNH/OHErw8V/P+EIj/ooGo9KD0CD+Sr3TG6yaypOz
+  artifact: /.*\.nupkg/
