--- a/Keyroads.DingtalkSDK.NetStandard/Keyroads.DingtalkSDK.NetStandard.csproj
+++ b/Keyroads.DingtalkSDK.NetStandard/Keyroads.DingtalkSDK.NetStandard.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net45</TargetFramework>
     <AssemblyName>Keyroads.DingtalkSDK.NetStandard</AssemblyName>
     <RootNamespace>Keyroads.DingtalkSDK</RootNamespace>
     <Version>1.0.0</Version>
