--- a/Keyroads.DingtalkSDK/packages.config
+++ b/Keyroads.DingtalkSDK/packages.config
@@ -5,5 +5,7 @@
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
-  <package id="Nito.AsyncEx" version="4.0.1" targetFramework="net45" />
+  <package id="Nito.AsyncEx.Context" version="1.1.0" targetFramework="net461" />
+  <package id="Nito.AsyncEx.Tasks" version="1.1.0" targetFramework="net461" />
+  <package id="Nito.Disposables" version="1.0.0" targetFramework="net461" />
 </packages>
